--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     >
                     <a
                       class="btn btn-lg btn-white-outline btn-white"
-                      href="./video/video/video.html"
+                      href="./video/video.html"
                       >FULL VIDEO</a
                     >
                   </div>
@@ -354,7 +354,7 @@
                   deep interest in antiques and collectibles.<br />
                 </p>
                 <div class="card-btn">
-                  <a href="./video/video/video.html" class="btn btn-primary">WATCH</a>
+                  <a href="./video/video.html" class="btn btn-primary">WATCH</a>
                 </div>
               </div>
             </div>
@@ -491,7 +491,7 @@
             >SHOP ONLINE</a> &nbsp; | &nbsp; 
           <a href="mall.html">FEATURES</a> &nbsp; | &nbsp;
           <a href="contact.html">CONTACT US</a>&nbsp; &nbsp;| &nbsp;
-          <a href="./video/video/video.html">VIDEO</a> &nbsp; | &nbsp;</a
+          <a href="./video/video.html">VIDEO</a> &nbsp; | &nbsp;</a
           ><a
             href="https://www.cigna.com/legal/compliance/machine-readable-files"
             >Link to MRF for Medial &amp; Prescription Coverage</a
