--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
                 <li class="nav-item">
                   <a
                     class="nav-link link"
-                    href="index.html"
+                    href="./index.html"
                     target="_blank"
                     >SHOP ONLINE</a
                   >
